CHORE: remove idea folder

--- a/.gitignore
+++ b/.gitignore
@@ -1076,3 +1076,4 @@ SpiritMS Src/target/classes/bot/event/SaveAllHandler.class
 SpiritMS Src/target/classes/bot/event/OnlineHandler.class
 SpiritMS Src/target/classes/bot/event/InfoHandler.class
 SpiritMS Src/target/classes/bot/event/DisconnectHandler.class
+/SpiritMS Src/.idea
